--- a/design/postcss/containers/_section-team.css
+++ b/design/postcss/containers/_section-team.css
@@ -1,7 +1,25 @@
+$member-container-xbig-desktop-width: 320px;
+$member-container-xbig-desktop-height: 348px;
+$member-img-xbig-desktop-width: 165px;
+
+$member-container-big-desktop-width: 295px;
+$member-container-big-desktop-height: 321px;
+$member-img-big-desktop-width: 150px;
+
+$member-container-medium-desktop-width: 280px;
+$member-container-medium-desktop-height: 305px;
+$member-img-medium-desktop-width: 135px;
+
+
 .section-team {
     background-color: #f0f6fe;
 
+    .section {
+        padding-bottom: 30px;
+    }
+
     .section-title {
+        margin-bottom: 28px;
         font-size: 46px;
         font-weight: bold;
         line-height: 1.09;
@@ -10,21 +28,30 @@
     }
 
     .section-sub-title {
+        margin-bottom: 20px;
         font-size: 29px;
         font-weight: bold;
         color: #0087ff;
     }
 }
 
+.section-advisors {
+    .section {
+        padding-top: 0;
+        padding-bottom: 20px;
+    }
+}
+
 .member-container-shadow {
     position: relative;
+    margin-bottom: 30px;
     &:before {
-        width: 280px;
-        height: 302px;
+        width: $member-container-xbig-desktop-width;
+        height: $member-container-xbig-desktop-height;
         position: absolute;
         top: 0;
-        margin-top: 85px;
-        margin-right: 3px;
+        margin-top: 82px;
+        margin-left: 7px;
         opacity: 0.25;
         border-radius: 5px;
         filter: blur(20.3px);
@@ -36,48 +63,48 @@
 
 .member-container {
     position: relative;
-    width: 280px;
-    min-height: 305px;
-    margin-top: 75px;
-    padding-top: 90px;
+    width: $member-container-xbig-desktop-width;
+    min-height: $member-container-xbig-desktop-height;
+    margin-top: calc($member-img-xbig-desktop-width / 2);
+    padding-top: calc($member-img-xbig-desktop-width / 2 + 25px);
     border-radius: 5px;
     background-color: $color-white;
     display: inline-block;
 
     .link {
-        width: 35px;
-        height: 35px;
+        width: 38px;
+        height: 38px;
         position: absolute;
-        top: 30px;
+        top: calc($member-img-xbig-desktop-width / 2 - 38px);
         left: 19px;
         background-color: #0087ff;
         border-radius: 50%;
 
         &:after {
-            width: 16px;
-            height: 16px;
-            position: absolute;
-            top: 9px;
-            left: 10px;
+            width: 38px;
+            height: 38px;
             display: block;
             content: '';
             background-image: resolve('icon-linkedin.svg');
-            background-size: contain;
+            background-size: 50%;
+            background-position: 50% 40%;
             background-repeat: no-repeat;
         }
     }
 }
 
 .member-img {
-    width: 135px;
-    height: 135px;
+    width: $member-img-xbig-desktop-width;
+    height: $member-img-xbig-desktop-width;
     position: absolute;
     top: 0;
-    left: 80px;
-    transform: translate(0, -67.5px);
-    background-image: resolve('team/team_photo_teddy.png');
+    left: calc(($member-container-xbig-desktop-width - $member-img-xbig-desktop-width) / 2);
+    transform: translate(0, calc($member-img-xbig-desktop-width / 2 * -1));
     background-size: cover;
+    background-size: 101%;
+    background-position: center center;
     border-radius: 50%;
+    box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.09);
 }
 
 .member-desc {
@@ -104,4 +131,149 @@
         line-height: 1.41;
         color: #097be0;
     }
+}
+
+@media $breakpoint-big-desktop{
+    .member-container-shadow {
+        &:before {
+            width: $member-container-big-desktop-width;
+            height: $member-container-big-desktop-height;
+        }
+    }
+
+    .member-container {
+        width: $member-container-big-desktop-width;
+        min-height: $member-container-big-desktop-height;
+        margin-top: calc($member-img-big-desktop-width / 2);
+        padding-top: calc($member-img-big-desktop-width / 2 + 25px);
+    }
+
+    .member-img {
+        width: $member-img-big-desktop-width;
+        height: $member-img-big-desktop-width;
+        left: calc(($member-container-big-desktop-width - $member-img-big-desktop-width) / 2);
+        transform: translate(0, calc($member-img-big-desktop-width / 2 * -1));
+    }
+}
+
+@media $breakpoint-medium-desktop{
+    .member-container-shadow {
+        &:before {
+            width: $member-container-medium-width;
+            height: $member-container-medium-height;
+        }
+    }
+
+    .member-container {
+        width: $member-container-medium-desktop-width;
+        min-height: $member-container-medium-desktop-height;
+        margin-top: calc($member-img-medium-desktop-width / 2);
+        padding-top: calc($member-img-medium-desktop-width / 2 + 25px);
+
+        .link {
+            width: 36px;
+            height: 36px;
+            top: calc($member-img-big-desktop-width / 2 - 36px);
+
+            &:after {
+                width: 36px;
+                height: 36px;
+            }
+        }
+    }
+
+    .member-img {
+        width: $member-img-medium-desktop-width;
+        height: $member-img-medium-desktop-width;
+        left: calc(($member-container-medium-desktop-width - $member-img-medium-desktop-width) / 2);
+        transform: translate(0, calc($member-img-medium-desktop-width / 2 * -1));
+
+        .link {
+            width: 35px;
+            height: 35px;
+            top: calc($member-img-medium-desktop-width / 2 - 35px);
+
+            &:after {
+                width: 35px;
+                height: 35px;
+            }
+        }
+    }
+}
+
+
+.member-advisor-YKChu {
+    background-image: resolve('team/team_photo_YKChu.png');
+}
+
+.member-advisor-JosephFan {
+    background-image: resolve('team/team_photo_JosephFan.png');
+}
+
+.member-advisor-TimHsu {
+    background-image: resolve('team/team_photo_TimHsu.png');
+}
+
+.member-advisor-AnthonyStaten {
+    background-image: resolve('team/team_photo_AnthonyStaten.png');
+}
+
+.member-advisor-ScofieldYeh {
+    background-image: resolve('team/team_photo_ScofieldYeh.png');
+}
+
+.member-advisor-ronald {
+    background-image: resolve('team/team_photo_ronald.png');
+}
+
+.member-team-teddy {
+    background-image: resolve('team/team_photo_teddy.png');
+}
+
+.member-team-blake {
+    background-image: resolve('team/team_photo_blake.png');
+}
+
+.member-team-ben {
+    background-image: resolve('team/team_photo_ben.png');
+}
+
+.member-team-johnny {
+    background-image: resolve('team/team_photo_johnny.png');
+}
+
+.member-team-star {
+    background-image: resolve('team/team_photo_star.png');
+}
+
+.member-team-alice {
+    background-image: resolve('team/team_photo_alice.png');
+}
+
+.member-team-LaticiaFan {
+    background-image: resolve('team/team_photo_LaticiaFan.png');
+}
+
+.member-team-albert {
+    background-image: resolve('team/team_photo_albert.png');
+}
+
+.member-team-nick {
+    background-image: resolve('team/team_photo_nick.png');
+}
+
+.member-team-TravisLiu {
+    background-image: resolve('team/team_photo_TravisLiu.png');
+}
+
+.member-team-ML-Chen {
+    background-image: resolve('team/team_photo_ML-Chen.png');
+}
+
+.member-team-jack {
+    background-image: resolve('team/team_photo_jack.png');
+}
+
+.member-team-NeilWong {
+    background-image: resolve('team/team_photo_NeilWong.png');
 }
