--- a/design/postcss/containers/_section-economics.css
+++ b/design/postcss/containers/_section-economics.css
@@ -14,6 +14,10 @@
         z-index: 1;
     }
 
+    .two-circle-container {
+        padding-bottom: 0;
+    }
+
     .pure-u-1-3, .pure-u-1-2, .pure-u-1-4 {
         z-index: 2;
     }
@@ -31,6 +35,14 @@
         color: #ffffff;
     }
 
+    .section-sub-title {
+        margin-top: 60px;
+        margin-bottom: 40px;
+        font-size: 29px;
+        font-weight: bold;
+        color: #ffffff;
+    }
+
     .section-msg {
         font-size: 17px;
         line-height: 1.59;
@@ -40,15 +52,18 @@
     .circle {
         height: 240px;
         width: 240px;
+        position: relative;
         margin-top: 38px;
         box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.09);
         background-color: rgba(0, 135, 255, 0.8);
         border-radius: 50%;
         display: inline-block;
+        z-index: 2;
 
         &.blue {
             margin-left: -50px;
             background-color: rgba(30, 192, 255, 0.8);
+            z-index: 1;
         }
     }
 
@@ -73,11 +88,11 @@
     }
 
     .chart-container {
-        padding: 0 150px 100px 150px;
+        padding: 0 150px 40px 150px;
     }
 
     .chart-center-text {
-        transform: translate(0, 190px);
+        transform: translate(0, -170px);
         font-size: 55px;
         font-weight: bold;
         line-height: 0.51;
