--- a/design/postcss/components/_header.css
+++ b/design/postcss/components/_header.css
@@ -22,8 +22,13 @@
         font-size: 15px;
         line-height: 35px;
         text-align: center;
-        background-color: #ffffff;
-        color: #133364;
+        background-color: rgba(74, 144, 226, 0.35);
+        color: #ffffff;
+
+        &:hover {
+            color: #133364;
+            background-color: #ffffff;
+        }
     }
 }
 
@@ -55,8 +60,11 @@
         a {
             margin-right: 30px;
             display: inline-block;
-            opacity: 0.7;
-            color: #ffffff;
+            color: rgba(255, 255, 255, 0.7);
+
+            &:hover {
+                color: #ffffff;
+            }
         }
     }
     /* adds down arrow */
