--- a/design/postcss/components/_subscription.css
+++ b/design/postcss/components/_subscription.css
@@ -63,6 +63,7 @@
     background-color: rgba(74, 144, 226, 0.35);
     border: solid 0.1px rgba(74, 144, 226, 0.35);
     color: #ffffff;
+    text-indent: 12px;
 
     &::placeholder {
         margin-left: 6px;
