--- a/design/postcss/containers/_home.css
+++ b/design/postcss/containers/_home.css
@@ -1,5 +1,5 @@
 .section-mainly {
-    min-height: 570px;
+    min-height: 90vh;
     position: relative;
     background-color: #133364;
 
@@ -16,7 +16,7 @@
     }
 
     .section {
-        padding-top: 165px;
+        padding-top: 25vh;
     }
 
     .section-content {
@@ -44,7 +44,7 @@
 
     .section-mainly-bg-container {
         position: absolute;
-        top: 118px;
+        top: 21vh;
         right: 0;
         z-index: 3;
     }
@@ -53,7 +53,7 @@
         width: 700px;
         height: 346px;
         position: absolute;
-        top: 20px;
+        top: 0;
         right: 0;
         background-image: resolve('macbook.png');
         background-size: 100% 100%;
