--- a/design/postcss/containers/_section-exchange.css
+++ b/design/postcss/containers/_section-exchange.css
@@ -192,6 +192,7 @@
     .desktop-slider-circle {
         width: 100%;
         height: 100%;
+        margin: 10px 10px;
         position: relative;
         background-image: resolve('exchange-circle-bg.png');
         background-size: contain;
@@ -281,7 +282,7 @@
         }
 
         .desc {
-            margin-top: 10px;
+            margin-top: 15px;
             font-size: 17px;
             line-height: 1.29;
             color: #133364;
@@ -295,12 +296,20 @@
             width: 475px;
             height: 338px;
         }
+
+        .desktop-slider-item {
+            width: 93%;
+        }
     }
 
     @media $breakpoint-medium-desktop{
         .section-exchange-video {
             width: 450px;
             height: 322px;
+        }
+
+        .desktop-slider-item {
+            width: 95%;
         }
     }
 }
