--- a/design/postcss/containers/_section-economics.css
+++ b/design/postcss/containers/_section-economics.css
@@ -166,3 +166,12 @@
         }
     }
 }
+
+@media $breakpoint-tablet {
+    .section-economics {
+        .labels {
+            height: auto;
+            flex-direction: row;
+        }
+    }
+}
