RWD (to be continued)

--- a/design/postcss/components/_footer.css
+++ b/design/postcss/components/_footer.css
@@ -131,6 +131,12 @@ footer {
 
     .footer-links { 
         margin-top: 39px;
+
+        .link {
+            &:after {
+                margin: 0 15px;
+            }
+        }
     }
 
     .copyright {
