--- a/design/postcss/containers/_section-exchange.css
+++ b/design/postcss/containers/_section-exchange.css
@@ -416,6 +416,71 @@
             height: initial;
             padding-top: 71%;
         }
+
+        .section-exchange-slider {
+            display: none;
+        }
+
+        .mobile-slider-circle-container {
+        }
+
+        .mobile-slider-circle {
+            width: 80%;
+            margin: 0 auto;
+            padding-top: 100%;
+            position: relative;
+            background-image: resolve('exchange-circle-bg.png');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center center;
+            display: flex;
+        }
+    
+        .mobile-slider-circle-2 {
+            position: absolute;
+            top: 30%;
+            left: 20%;
+            z-index: 2;
+            width: 130px;
+            height: 130px;            
+            opacity: 0.8;
+            background-color: #0087ff;
+            border-radius: 50%;
+    
+            &:before {
+                width: 100%;
+                height: 100%;
+                display: inline-block;
+                content: '';
+                background-image: resolve('icon-big-b.svg');
+                background-size: 50% 50%;
+                background-repeat: no-repeat;
+                background-position: center;
+            }
+        }
+    
+        .mobile-slider-circle-3 {
+            width: 90px;
+            height: 92px;
+            position: absolute;
+            top: calc(35% + 55px);
+            left: calc(30% + 80px);
+            opacity: 0.8;
+            background-color: #1ec0ff;
+            border-radius: 50%;
+            z-index: 1;
+    
+            &:before {
+                width: 100%;
+                height: 100%;
+                display: inline-block;
+                content: '';
+                background-image: resolve('icon-big-diamond.svg');
+                background-size: 60% 60%;
+                background-position: center;
+                background-repeat: no-repeat;
+            }
+        }
     }
 }
 
